# CodeCrafted-Geometry

./: .eslintrc.js  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  CodeCrafted-Geometry.code-workspace  README.md  jest.config.ts  package-lock.json  package.json
.ci/: CodeCraftedGeoemtry.md.in  CodeCraftedGeometry.cpp.in  CodeCraftedGeometry.json  CodeCraftedGeometry.ts.in  CodeCraftedGeometryJs.d.ts  CodeCraftedGeometryWasm.d.ts  tsConfig.json  tsconfig.json  wasmInterfaceGenerator.ts
.ci/bundler/: webpack.common.js
.ci/embind/: generateWasmInterfaces.ts  tsConfig.json  wasmInterfaceGenerator.ts
.ci/wasm/: buildScripts.ts  buildWASM.sh  tsConfig.json
.devcontainer/: devcontainer.json  post_create_command.sh
.github/workflows/: main.yaml
cpp/: CMakeLists.txt  emscriptenBindings.cpp
cpp/embind/: .gitignore  emscriptenInterface.h
cpp/tests/: CMakeLists.txt  catch2.h  dummyTest.cpp
docs/: CodeCraftedGeometryInterface.md  notes_and_todo.md
ts/__tests__/: dummyTest.ts  loadWasmTest.ts
ts/client/: client.ts  tsconfig.json  webpack.common.js
ts/client/embind/: .gitignore
ts/embind/: CodeCraftedGeometry.ts
ts/server/: server.ts  tsconfig.json
ts/server/__tests__/: dummyTest.ts  loadWasmTest.ts
ts/wasm/: .gitignore  CodeCraftedGeometryJs.d.ts  CodeCraftedGeometryWasm.d.ts
